NOCC 0.9.8    ?? ??, 2005



NOCC 0.9.7    July 01, 2005

    * Add quotas limits display. (Arnaud Boudou)
    * Add mailbox RSS streams. (Arnaud Boudou)
    * Fix issue where text and image attachments where not rendered at the end
      of the mail (Arnaud Boudou)
    * Add an option to remember login settings, using a cookie (Arnaud Boudou)
    * Fix issue with deleted messages when user open message in a new window
      (Arnaud Boudou, bug #1163679)
    * Add email sent confirmation within Inbox menu. (Arnaud Boudou, RFE
      489151)
    * Dynamically load IMAP module if needed. (Arnaud Boudou, RFE #644084)
    * Force 'MIME-Version: 1.0' header for all outgoing mails. (Arnaud Boudou,
      bug #1090264)
    * Fix issue with Javascript and non ASCII language file. (Arnaud Boudou,
      bug #1089729)
    * Add configuration for IMAP Namespace. (Arnaud Boudou)
    * Add configuration for line feed behavior, could be useful with some
      MTA. (Arnaud Boudou)
    * Add possibility to copy sent mails into a dedicated folder - IMAP only
      (Arnaud Boudou, RFE #436736).
    * Fix issue with persistent sessions variable while login accross different
      users (Arnaud Boudou, bugs #1047257 and #1047233).
    * Eliminated the javascript requirement when adding or removing
      attachments while composing a message, javascript validation is still
      performed (Leif Gustafson, RFE #602492).
    * Moved (again) <? to <?php, better compatibility when short tags are
      disabled (Arnaud Boudou, bug #1039217).
    * In mail list, clicking on the sender email and/or name now open a new
      mail window with the "To:" field filled with the email address (Arnaud
      Boudou).
    * Fix issue where an email address from a mailto: link into a message
      was not used when clicked on (Arnaud Boudou, bug #1034907).
    * Fix issue where Nocc use imap functions to open message which does not
      exists anymore, and cause IMAP toolkit crash (Leif Gustafson, patch