@@ -43,6 +43,9 @@ PHP, hence the new name. See later for a bit of history.
    The full application (source code, icons) is distributed under the terms of
 the GNU General Public License. See the file COPYING for details.
 
+   Some files are distributed under the terms of the PHP License. See the file
+PHP_LICENSE for details.
+
   Getting Nocc
   ------------
 
